tests/ui/repeat-expr/copy-check-deferred-after-fallback.stderr
error[E0282]: type annotations needed for `[NotCopy; _]`
  --> $DIR/copy-check-deferred-after-fallback.rs:21:9
   |
LL |     let b = [NotCopy; _];
   |         ^    ------- type must be known at this point
   |
help: consider giving `b` an explicit type, where the value of const parameter `N` is specified
   |
LL |     let b: [_; N] = [NotCopy; _];
   |          ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
